[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.80"
edition = "2021"
license = "MIT"
authors = ["Jakobzs"]
repository = "https://github.com/jakobzs/rustscape"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
notify = "4"
tokio-postgres = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
rs-cache = { git = "https://github.com/osrs-rs/rs-cache", branch = "master" } # { path = "../osrs-cache", version = "0.1" }
num = "0.4"
extended-tea = "0.1" # { path = "../xtea", version = "0.1" }
rand_core = { version = "0.6", features = ["getrandom"] }
rand_isaac = { version = "0.3" }
bitstream-io = "1"
walkdir = "2"
toml = "0.7"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
osrs-buffer = "0.5" # { path = "../osrs-buffer", version = "0.1" }
slab = "0.4"
anyhow = "1"
crossbeam = "0.8"
#osrs_shared = { path = "../shared" }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
#pathfinder = { path = "../pathfinder" }
#worldinfo = { path = "../worldinfo" }
axum = "0.6"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
spin_sleep = "1"
rs2-cache = "0.3"
object = { version = "0.31", features = ["write"] }
