[package]
name = "worldserver"
version = "0.1.0"
edition = "2021"
default-run = "worldserver"

[dependencies]
tokio = { workspace = true }
notify = { workspace = true }
tokio-postgres = { workspace = true }
rusqlite = { workspace = true }
rs-cache = { workspace = true }
num = { workspace = true }
extended-tea = { workspace = true }   # { path = "../xtea", version = "0.1" }
rand_core = { workspace = true }
rand_isaac = { workspace = true }
bitstream-io = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
osrs-buffer = { workspace = true }    # { path = "../osrs-buffer", version = "0.1" }
slab = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }
#osrs_shared = { path = "../shared" }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
#pathfinder = { path = "../pathfinder" }
#worldinfo = { path = "../worldinfo" }
axum = { workspace = true }
mlua = { workspace = true }
spin_sleep = { workspace = true }
rs2-cache = { workspace = true }
